--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: rgb(60, 60, 60);
-    color: white;
+.product-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
